# Airflow-DBT-Databricks-Data-Engineering-Project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Airflow/: docker-compose.yaml  requirements.txt
Airflow/Airflow_DBT_Databricks_Data_Engineering_Project/: .user.yml  dbt_project.yml
Airflow/Airflow_DBT_Databricks_Data_Engineering_Project/analyses/: test.sql
Airflow/Airflow_DBT_Databricks_Data_Engineering_Project/macros/: generate_schema_name.sql
Airflow/Airflow_DBT_Databricks_Data_Engineering_Project/snapshots/: dim_orders.yml  dim_products.yml  dim_stores.yml
Airflow/Airflow_DBT_Databricks_Data_Engineering_Project/tests/: test_obt.sql
Airflow/config/: airflow.cfg
Airflow/dags/: orchestrate.py
Airflow_DBT_Databricks_Data_Engineering_Project/: profiles.yml
Airflow_DBT_Databricks_Data_Engineering_Project/analyses/: test.sql
Airflow_DBT_Databricks_Data_Engineering_Project/models/bronze/: bronze_customers.sql  bronze_employees.sql  bronze_order_items.sql  bronze_orders.sql  bronze_products.sql  bronze_stores.sql  properties.yml
Airflow_DBT_Databricks_Data_Engineering_Project/models/gold/ephemeral/: eph_employees.sql  eph_orders.sql
Airflow_DBT_Databricks_Data_Engineering_Project/models/silver/: obt.sql
Airflow_DBT_Databricks_Data_Engineering_Project/models/sources/: sources.yml
Airflow_DBT_Databricks_Data_Engineering_Project/snapshots/: dim_customers.yml  dim_employees.yml
Dataset/: load_data.py
Dataset/data/: check_databricks.py  generate_ingestion.py  ingestion_stores.csv
(+4 files in other folders)
