[project]
name = "airflow-dbt-databricks-data-engineering-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "airflow-operators>=0.11.0",
    "apache-airflow>=3.3.0",
    "databricks-sdk>=0.47.0",
    "dbt-core>=1.11.12",
    "dbt-databricks>=1.10.9",
]
